--- a/project.yml
+++ b/project.yml
@@ -34,6 +34,8 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: app.applesword.native
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         SWIFT_VERSION: 6.2
+        MARKETING_VERSION: 0.8.1
+        CURRENT_PROJECT_VERSION: 407
         ENABLE_HARDENED_RUNTIME: YES
         CODE_SIGN_STYLE: Automatic
         DEVELOPMENT_TEAM: ""
@@ -49,12 +51,15 @@ targets:
     deploymentTarget: "14.0"
     sources:
       - path: AppleSwordExtension
-    settings:
-      base:
-        INFOPLIST_FILE: AppleSwordExtension/Info.plist
-        PRODUCT_BUNDLE_IDENTIFIER: app.applesword.native.extension
-        GENERATE_INFOPLIST_FILE: NO
-        SWIFT_VERSION: 6.2
-        ENABLE_HARDENED_RUNTIME: YES
-        CODE_SIGN_STYLE: Automatic
-        DEVELOPMENT_TEAM: ""
+        settings:
+          base:
+            INFOPLIST_FILE: AppleSwordExtension/Info.plist
+            PRODUCT_BUNDLE_IDENTIFIER: app.applesword.native.extension
+            GENERATE_INFOPLIST_FILE: NO
+            SWIFT_VERSION: 6.2
+            MARKETING_VERSION: 0.8.1
+            CURRENT_PROJECT_VERSION: 407
+            ENABLE_HARDENED_RUNTIME: YES
+            CODE_SIGN_STYLE: Automatic
+            DEVELOPMENT_TEAM: ""
+    
