--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,23 +22,16 @@ jobs:
           brew install xcodegen
           brew install create-dmg
 
+      - name: Set up Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: 'latest-stable'
+
       - name: Generate Project
         run: xcodegen
 
-      - name: Create ExportOptions.plist
-        run: |
-          cat <<EOF > ExportOptions.plist
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-              <key>method</key>
-              <string>developer-id</string>
-              <key>signingStyle</key>
-              <string>manual</string>
-          </dict>
-          </plist>
-          EOF
+      - name: Resolve Package Dependencies
+        run: xcodebuild -resolvePackageDependencies -scheme AppleSword
 
       - name: Build Universal App
         run: |
@@ -46,9 +39,12 @@ jobs:
             -scheme AppleSword \
             -destination "platform=macOS" \
             -configuration Release \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO \
+            CODE_SIGN_IDENTITY="-" \
+            CODE_SIGNING_REQUIRED=YES \
+            CODE_SIGNING_ALLOWED=YES \
+            ONLY_ACTIVE_ARCH=NO \
+            MACOSX_DEPLOYMENT_TARGET=15.0 \
+            SWIFT_STRICT_CONCURRENCY=minimal \
             BUILD_DIR=Build
 
       - name: Prepare Universal App
