--- a/project.yml
+++ b/project.yml
@@ -51,15 +51,19 @@ targets:
     deploymentTarget: "14.0"
     sources:
       - path: AppleSwordExtension
-        settings:
-          base:
-            INFOPLIST_FILE: AppleSwordExtension/Info.plist
-            PRODUCT_BUNDLE_IDENTIFIER: app.applesword.native.extension
-            GENERATE_INFOPLIST_FILE: NO
-            SWIFT_VERSION: 6.2
-            MARKETING_VERSION: 0.8.1
-            CURRENT_PROJECT_VERSION: 407
-            ENABLE_HARDENED_RUNTIME: YES
-            CODE_SIGN_STYLE: Automatic
-            DEVELOPMENT_TEAM: ""
+    settings:
+      base:
+        INFOPLIST_FILE: AppleSwordExtension/Info.plist
+        PRODUCT_BUNDLE_IDENTIFIER: app.applesword.native.extension
+        GENERATE_INFOPLIST_FILE: NO
+        SWIFT_VERSION: 6.2
+        MARKETING_VERSION: 0.8.1
+        CURRENT_PROJECT_VERSION: 407
+        ENABLE_HARDENED_RUNTIME: YES
+        CODE_SIGN_STYLE: Automatic
+        DEVELOPMENT_TEAM: ""
+    dependencies:
+      - package: Aria2Kit
+      - package: AnyCodable
+      - package: Alamofire
     
