--- a/MaltexExtension/Resources/manifest.json
+++ b/MaltexExtension/Resources/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "AppleSword Extension",
+    "name": "Maltex Extension",
     "version": "0.1",
-    "description": "Send downloads to AppleSword",
+    "description": "Send downloads to Maltex",
     "permissions": ["contextMenus", "tabs"],
     "background": {
         "service_worker": "js/background.js"
